--- a/package.json
+++ b/package.json
@@ -3,31 +3,37 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node server/app.js",
-    "webpack": "webpack",
-    "start-dev": "node-dev server/app.js",
-    "webpack-dev": "webpack -w"
+    "start": "webpack-dev-server",
+    "dev": "webpack -w",
+    "build": "webpack",
+    "release": "webpack --config webpack.production.config.js"
   },
   "engines": {
     "node": "^8.9.4"
   },
-  "dependencies": {
-    "express": "^4.16.2"
-  },
   "devDependencies": {
-    "bootstrap": "^3.3.7",
-    "bootstrap-loader": "^2.2.0",
-    "bootstrap-sass": "^3.3.7",
-    "bootstrap-slider": "^10.0.0",
-    "css-loader": "^0.28.10",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.11",
-    "jquery": "^3.3.1",
-    "node-sass": "^4.7.2",
-    "resolve-url-loader": "^2.3.0",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.20.3",
-    "url-loader": "^1.0.1",
-    "webpack": "^3.10.0"
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "bootstrap": "^3.4.1",
+    "bootstrap-loader": "^3.0.4",
+    "bootstrap-sass": "^3.4.1",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
+    "eslint-loader": "^2.1.2",
+    "file-loader": "^3.0.1",
+    "jquery": "^3.4.1",
+    "microevents": "^0.3.3",
+    "mini-css-extract-plugin": "^0.6.0",
+    "node-sass": "^4.12.0",
+    "resolve-url-loader": "^3.1.0",
+    "sass-loader": "^7.1.0",
+    "terser-webpack-plugin": "^1.2.3",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.28.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1",
+    "webpack-merge": "^4.2.1"
   }
 }
