--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,15 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#000000",
-        "activityBar.foreground": "#e7e7e7",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#008bb3",
-        "activityBarBadge.foreground": "#e7e7e7",
-        "titleBar.activeBackground": "#00b3e6",
-        "titleBar.inactiveBackground": "#00b3e699",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveForeground": "#15202b99",
-        "statusBar.background": "#008bb3",
-        "statusBarItem.hoverBackground": "#00b3e6",
-        "statusBar.foreground": "#e7e7e7"
-    }
+        "titleBar.activeBackground": "#000000",
+        "titleBar.inactiveBackground": "#00000099",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveForeground": "#e7e7e799",
+        "statusBar.background": "#000000",
+        "statusBarItem.hoverBackground": "#1a1a1a",
+        "statusBar.foreground": "#e7e7e7",
+        "tab.activeBorder": "#000000",
+        "statusBar.border": "#000000",
+        "titleBar.border": "#000000"
+    },
+    "peacock.color": "#1a1a1a"
 }
